[package]
name = "Spyder"
version = "0.8.0"
authors = ["Acala Developers"]
edition = "2018"

[[bin]]
name = "Spyder"
path = "src/main.rs"

[dependencies]
futures = "0.3.4"
parity-util-mem = { version = "0.9.0", default-features = false, features = ["jemalloc-global"] }
Spyder-cli = { path = "cli" }
Spyder-service = { path = "service" }

[features]
default = [ "with-mandala-runtime" ]
runtime-benchmarks = [
	"Spyder-cli/runtime-benchmarks",
]
with-mandala-runtime = [
	"Spyder-service/with-mandala-runtime",
	"Spyder-cli/with-mandala-runtime",
]
with-karura-runtime = [
	"Spyder-service/with-karura-runtime",
	"Spyder-cli/with-karura-runtime",
]
with-Spyder-runtime = [
	"Spyder-service/with-Spyder-runtime",
	"Spyder-cli/with-Spyder-runtime",
]
with-all-runtime = [
	"Spyder-service/with-all-runtime",
	"Spyder-cli/with-all-runtime",
]
